apps/o12stack-test-center/o12stack-test-center-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: o12stack-test-center 
spec:
  ports:
  - name: web
    port: 8080
    
  selector:
    name: o12stack-test-center
