apps/o12stack-test-center/o12stack-test-center-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: o12stack-test-center 
spec:
  rules:
  - host: o12stack-test-center.${HOSTNAME}.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: o12stack-test-center
            port: 
              name: web
